--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "build": "npx tsc"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "tsconfig-paths": "^4.2.0",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
